--- a/src/pages/Shikshalokam Mitra/stylesheet/shikshaChatStyle.css
+++ b/src/pages/Shikshalokam Mitra/stylesheet/shikshaChatStyle.css
@@ -195,6 +195,7 @@
     /* min-height: 100vh; */
     /* height: auto; */
     height: 100%;
+    overflow-y: auto;
     /* overflow-y: auto; */
 }
 
