--- a/src/pages/Shikshalokam Mitra/stylesheet/chatStyle.css
+++ b/src/pages/Shikshalokam Mitra/stylesheet/chatStyle.css
@@ -804,6 +804,12 @@
         cursor: pointer;
         font-size: 1.2rem;
     }
+
+    .delete-icon-disable {
+        color: rgb(73, 70, 70);
+        font-size: 1.2rem;
+        cursor: no-drop;
+    }
     
     .final-action-input {
         border-bottom: 1px solid #000 !important;
@@ -1815,6 +1821,12 @@
         color: rgb(73, 70, 70);
         cursor: pointer;
         font-size: 1.2rem;
+    }
+
+    .delete-icon-disable {
+        color: rgb(73, 70, 70);
+        font-size: 1.2rem;
+        cursor: no-drop;
     }
     
     .final-action-input {
